--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://qq112.gqaew.ml/hvximmaa/x7l" rel="nofollow">大纪元</a> | <a href="https://qq112.gqaew.ml/hvximmaa/o513i" rel="nofollow">动态网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=G5IN0M9kn5F64" rel="nofollow">神州</a> | <a href="https://qq112.gqaew.ml/hvximmaa/f8h" rel="nofollow">退党</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oQhDrP9jaNomgd953b1AgeVB1TtAnol74" rel="nofollow">九评</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=8D43fA4loYFTi0" rel="nofollow">网门</a> | <a href="https://qq112.gqaew.ml/hvximmaa/w4m" rel="nofollow">神韵</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=ZiIMbsVmsNV54" rel="nofollow">新纪元</a> | <a href="https://qq112.gqaew.ml/hvximmaa/g11m" rel="nofollow">看中国</a> | <a href="https://qq112.gqaew.ml/hvximmaa/n3d" rel="nofollow">明慧网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=sM1DqTVg5hMgn4FQl7oQjflQm187n3t4q0" rel="nofollow">明慧十方</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=vPRklaR07gs12hxAhrdwgbJkm7RxrotQgI12" rel="nofollow">明慧焦点</a> | <a href="https://qq112.gqaew.ml/hvximmaa/q9j" rel="nofollow">希望之声</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Trlljilh3b4huwVSsHESoz5SvBo5o-J7l0" rel="nofollow">漫谈党文化</a ></p><p><a href="https://qq112.gqaew.ml/hvximmaa/f5z" rel="nofollow">新唐人</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=LrN5nvs5grJMkhpwijNQ48Z2nK5nsu12" rel="nofollow">亚太台</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yNJnohBwu4JRnM12" rel="nofollow">直播</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=UkhBjj9N2703cJEnpFp7aDNCryFD8jdCoAB44" rel="nofollow">传奇</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=RpJRggtN0fc1hvNmsJMmoxZmsDgBpVBDl0" rel="nofollow">神话</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=7Hlmvylie_4ytNRDoYI7sOVDrSsQtKxmh0" rel="nofollow">人生</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7Vx128g1qYAlkBk5kBlmnpDbvZCtMR54" rel="nofollow">伪火</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=QoxBgvpN29ghhs95sKQCpwN6sEklpUVTl0" rel="nofollow">真相片</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7VN0tEklpp46nNBniFA4zNSsTx54" rel="nofollow">藏字石</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=hZZTpYJ38DA2aR8mvNV6cfhAha9B2XJAms574" rel="nofollow">短视频</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=4ExCsLpie-gitI9Sv-UTtTRToVE4tHZ6g0" rel="nofollow">告诉未来</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=F5tQn4dM6s000tEklpp46nNBniFA4zNSsTx54" rel="nofollow">终级目的</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=i_V7oZxP9wAOaQk6vOZS3etQhddl2WhQmv174" rel="nofollow">中共活摘</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wcNAlbFM4kwgk8pQm38QibBRhtU6m7d4r0" rel="nofollow">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://qq112.gqaew.ml/ftdkwb/u7z" rel="nofollow">大纪元</a> | <a href="https://qq112.gqaew.ml/ftdkwb/a513u" rel="nofollow">动态网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=G5IN0M9kn5F64" rel="nofollow">神州</a> | <a href="https://qq112.gqaew.ml/ftdkwb/k8v" rel="nofollow">退党</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oQhDrP9jaNomgd953b1AgeVB1TtAnol74" rel="nofollow">九评</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=8D43fA4loYFTi0" rel="nofollow">网门</a> | <a href="https://qq112.gqaew.ml/ftdkwb/e4b" rel="nofollow">神韵</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=ZiIMbsVmsNV54" rel="nofollow">新纪元</a> | <a href="https://qq112.gqaew.ml/ftdkwb/d11w" rel="nofollow">看中国</a> | <a href="https://qq112.gqaew.ml/ftdkwb/x3s" rel="nofollow">明慧网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=sM1DqTVg5hMgn4FQl7oQjflQm187n3t4q0" rel="nofollow">明慧十方</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=vPRklaR07gs12hxAhrdwgbJkm7RxrotQgI12" rel="nofollow">明慧焦点</a> | <a href="https://qq112.gqaew.ml/ftdkwb/o9t" rel="nofollow">希望之声</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Trlljilh3b4huwVSsHESoz5SvBo5o-J7l0" rel="nofollow">漫谈党文化</a ></p><p><a href="https://qq112.gqaew.ml/ftdkwb/z5o" rel="nofollow">新唐人</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=LrN5nvs5grJMkhpwijNQ48Z2nK5nsu12" rel="nofollow">亚太台</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yNJnohBwu4JRnM12" rel="nofollow">直播</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=UkhBjj9N2703cJEnpFp7aDNCryFD8jdCoAB44" rel="nofollow">传奇</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=RpJRggtN0fc1hvNmsJMmoxZmsDgBpVBDl0" rel="nofollow">神话</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=7Hlmvylie_4ytNRDoYI7sOVDrSsQtKxmh0" rel="nofollow">人生</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7Vx128g1qYAlkBk5kBlmnpDbvZCtMR54" rel="nofollow">伪火</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=QoxBgvpN29ghhs95sKQCpwN6sEklpUVTl0" rel="nofollow">真相片</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7VN0tEklpp46nNBniFA4zNSsTx54" rel="nofollow">藏字石</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=hZZTpYJ38DA2aR8mvNV6cfhAha9B2XJAms574" rel="nofollow">短视频</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=4ExCsLpie-gitI9Sv-UTtTRToVE4tHZ6g0" rel="nofollow">告诉未来</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=F5tQn4dM6s000tEklpp46nNBniFA4zNSsTx54" rel="nofollow">终级目的</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=i_V7oZxP9wAOaQk6vOZS3etQhddl2WhQmv174" rel="nofollow">中共活摘</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wcNAlbFM4kwgk8pQm38QibBRhtU6m7d4r0" rel="nofollow">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113370.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/05/d16322087bba2d48b8c064c1d516e052-320x200.png"><p align="center">【最新疫情5·17】美逾9万人死于中共病毒</p></a>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113370.md#1" title="【最新疫情5·17】美逾9万人死于中共病毒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/d16322087bba2d48b8c064c1d516e052-320x200.png">&nbsp;</a>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/1/n12076409.md#1" title="【历史上的瘟疫】带走伦敦1/5人口的瘟疫""><img width="73" src="https://i.epochtimes.com/assets/uploads/2007/01/701210733151898-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12114951.md#1" title="中共前军官：高级军官都在观望局势""><img width="73" src="https://i.epochtimes.com/assets/uploads/2009/09/909220236141849-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12115006.md#1" title="湖南退役士官反强拆被拘留 决意抗争到底""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/60de9f79062f2107fc7b7a7c878cd8de-320x200.jpeg">&nbsp;</a>
 <p align="center"><a href="https://github.com/dsc2569/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://dsc2569.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12116518.md#1">中共威胁要制裁 美议员：这不会让我噤声</a><br>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12116073.md#1">【纽约疫情5.17】首府、西部地区达到开放标准</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12115921.md#1">“一带一路”带来“一带疫路”（健康篇）</a><br>
-:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12115482.md#1">从六四到强拆 中国民主党主席宁先华看中共</a><br>
-:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12116387.md#1">太极大师马保国PK王庆民 10秒被击倒3次</a><br>
-:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12116262.md#1">【珍言真语】吴明德：反送中帮香港赚了28万亿</a><br>
+:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12116073.md#1">【纽约疫情5.17】首府、西部地区有资格重启</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12116518.md#1">中共威胁要制裁 美议员：这不会让我噤声</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12115921.md#1">“一带一路”带来“一带疫路”（健康篇）</a><br>
+:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12115482.md#1">从六四到强拆 中国民主党主席宁先华看中共</a><br>
+:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12116387.md#1">太极大师马保国PK王庆民 10秒被击倒3次</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12116262.md#1">【珍言真语】吴明德：反送中帮香港赚了28万亿</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113099.md#1">川普称可切断“美中关系” 赵立坚软化回应</a><br>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113136.md#1">方方和敲锣女 现代版“农夫和蛇”的故事？</a><br>
